src/Test/Fixtures/Bad/TypeQualifier/unexpectedScratchAfterBindingName.lf
let linear q scratch = qalloc();
